'add write data to index.html'

--- a/index.html
+++ b/index.html
@@ -1,18 +1,12 @@
-<div>
-  <div style="position:relative;">
-    <img src="" usemap="#Map1" />
-    <map name=1 id=1>
-      <area alt="11" title="2222" href="1231" target="" shape="rect" coords="231 23 21 321" />
-      <area alt="11" title="2222" href="1231" target="" shape="rect" coords="231 23 21 321" />
-    </map>
-    <span jdprice="123" class="jdNum" jshop="price" style="position:absolute;font-size:1323px;color:#qweqw;top:123px;left:123px;"></span>
-  </div>
-  <div style="position:relative;">
-    <img src="" usemap="#Map1" />
-    <map name=1 id=1>
-      <area alt="11" title="2222" href="1231" target="" shape="rect" coords="231 23 21 321" />
-      <area alt="11" title="2222" href="1231" target="" shape="rect" coords="231 23 21 321" />
-    </map>
-    <span jdprice="123" class="jdNum" jshop="price" style="position:absolute;font-size:1323px;color:#qweqw;top:123px;left:123px;"></span>
-  </div>
-</div>
+
+    <div>
+      <div style="position:relative;">
+        <img src="" usemap="#Map1" />
+        <map name=1 id=1>
+          <area alt="122221" title="2222" href="1231" target="_blank" shape="rect" coords="231 23 21 321" />
+<area alt="11" title="2222" href="1231" target="_self" shape="rect" coords="231 23 21 321" />
+        </map>
+        <span jdprice="123" class="jdNum" jshop="price" style="position:absolute;font-size:'1323px';color:'#qweqw';top:'123px';left:'123px';"></span>
+      </div>
+    </div>
+    
